--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -74,12 +74,15 @@ services:
     shm_size: "2gb"
     command: >
       sh -c "
-      echo '🧪 開始執行 Cypress 測試...' &&
-      yarn cypress:run || true &&
-      echo '✅ HTML 報告路徑: cypress/reports/html/index.html' &&
-      echo '📸 截圖資料夾: cypress/screenshots/' &&
-      ls -la cypress/reports/html/ || true &&
-      echo '🎉 E2E 測試流程完成！'
+      echo '🧪 開始執行 Cypress 測試...';
+      set +e;
+      yarn cypress:run;
+      EXIT_CODE=$?;
+      echo '✅ HTML 報告路徑: cypress/reports/html/index.html';
+      echo '📸 截圖資料夾: cypress/screenshots/';
+      ls -la cypress/reports/html/ || true;
+      echo '🎉 E2E 測試流程完成！(exit='\"$EXIT_CODE\"')';
+      exit $EXIT_CODE;
       "
 
 volumes:
