fix: 修復 git action page問題

--- a/.github/workflows/ci-e2e.yml
+++ b/.github/workflows/ci-e2e.yml
@@ -132,11 +132,14 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: site
+          name: e2e-report-${{ github.run_id }}
 
       - name: Deploy to GitHub Pages
         if: always()
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          artifact_name: e2e-report-${{ github.run_id }}
 
       - name: Append Pages URL to summary
         if: always()
