修正 Zeabur CLI 安裝問題
- 嘗試多種安裝方式：zeabur.com/install.sh, get.zeabur.sh, npm install -g @zeabur/cli
- 加強路徑偵測和除錯資訊
- 改善 CLI 執行檔尋找邏輯
- 解決 404 錯誤問題

--- a/.github/workflows/deploy-zeabur.yml
+++ b/.github/workflows/deploy-zeabur.yml
@@ -339,12 +339,28 @@ jobs:
         run: |
           set -euo pipefail
           echo "📥 安裝 Zeabur CLI..."
-          curl -fsSL https://zeabur.com/cli/install.sh | sh
+          # Try multiple installation methods
+          if ! curl -fsSL https://zeabur.com/install.sh | sh; then
+            echo "First method failed, trying alternative..."
+            if ! curl -fsSL https://get.zeabur.sh | sh; then
+              echo "Second method failed, trying npm..."
+              npm install -g @zeabur/cli || true
+            fi
+          fi
+          
+          # Add multiple possible paths
           echo "$HOME/.local/bin" >> $GITHUB_PATH || true
           echo "$HOME/.zeabur/bin" >> $GITHUB_PATH || true
           echo "/usr/local/bin" >> $GITHUB_PATH || true
+          echo "/usr/bin" >> $GITHUB_PATH || true
+          
+          # Debug path and check installation
           echo "PATH after update: $PATH"
-          ls -la "$HOME/.local/bin" || true
+          ls -la "$HOME/.local/bin" 2>/dev/null || echo "No ~/.local/bin"
+          ls -la "$HOME/.zeabur/bin" 2>/dev/null || echo "No ~/.zeabur/bin"
+          
+          # Test zeabur command
+          export PATH="$HOME/.local/bin:$HOME/.zeabur/bin:/usr/local/bin:$PATH"
           ls -la "$HOME/.zeabur/bin" || true
           which zeabur || true
           if command -v zeabur >/dev/null 2>&1; then
