根據 Zeabur 官方文檔修正部署 API
🔧 主要修正：
- 使用正確的 API 端點：https://api.zeabur.com/graphql
- 採用官方推薦的 deployTemplate mutation
- 新增 triggerDeploy 作為備用方法
- 實作檔案上傳 API 作為最後備案

📋 部署方法：
1. deployTemplate - 使用 YAML 配置部署（推薦）
2. triggerDeploy - 觸發現有服務重新部署
3. 檔案上傳 - 直接上傳 ZIP 到服務

📚 參考文檔：https://zeabur.com/docs/zh-TW/developer/public-api

--- a/.github/workflows/deploy-zeabur.yml
+++ b/.github/workflows/deploy-zeabur.yml
@@ -39,7 +39,7 @@ on:
         type: boolean
 
 env:
-  ZEABUR_API_TOKEN: ${{ secrets.ZEABUR_API_TOKEN }}
+  ZEABUR_TOKEN: ${{ secrets.ZEABUR_TOKEN }}
   ZEABUR_PROJECT_ID: ${{ secrets.ZEABUR_PROJECT_ID }}
   NODE_ENV: ${{ github.event.inputs.environment }}
 
@@ -341,7 +341,7 @@ jobs:
           
           # Test API connection
           RESPONSE=$(curl -s -w "%{http_code}" -X POST https://api.zeabur.com/graphql \
-            -H "Authorization: Bearer $ZEABUR_API_TOKEN" \
+            -H "Authorization: Bearer $ZEABUR_TOKEN" \
             -H "Content-Type: application/json" \
             --data '{"query":"query { me { username } }"}')
           
@@ -401,93 +401,50 @@ jobs:
           echo "🎨 前端分支: ${{ needs.validate-inputs.outputs.frontend-branch }}"
           echo "🆔 專案 ID: $ZEABUR_PROJECT_ID"
           
-          # 使用 GraphQL API 觸發重新部署
-          echo "🔄 觸發重新部署..."
-          echo "🆔 使用 ID: $ZEABUR_PROJECT_ID"
-          
-          # 嘗試多種可能的 mutation 語法
-          echo "🔍 方法 1: 嘗試 redeployService mutation..."
-          RESPONSE1=$(curl -s -w "\n%{http_code}" --connect-timeout 30 --max-time 60 \
+          echo "🔍 使用 Zeabur 官方 API 進行部署..."
+          echo "📋 使用 deployTemplate mutation..."
+
+          # 確保 jq 可用
+          if ! command -v jq >/dev/null 2>&1; then sudo apt-get update -y && sudo apt-get install -y jq; fi
+
+          ENV_NAME="${{ needs.validate-inputs.outputs.environment }}"
+
+          # 構建 YAML 內容（用 printf 避免 heredoc 導致 YAML 縮排問題）
+          DEPLOY_CONFIG=$(printf '%s\n' \
+            "services:" \
+            "  - name: health-app" \
+            "    source:" \
+            "      type: local" \
+            "      path: ." \
+            "    environment: __ENV__" \
+          )
+
+          # 注入環境值
+          DEPLOY_CONFIG="${DEPLOY_CONFIG/__ENV__/$ENV_NAME}"
+
+          # 以 jq 構造 JSON 請求，避免換行轉義問題
+          PAYLOAD=$(jq -nc --arg rawSpecYaml "$DEPLOY_CONFIG" --arg projectId "$ZEABUR_PROJECT_ID" '{query:"mutation DeployTemplate($rawSpecYaml: String!, $projectId: ObjectID!) { deployTemplate(rawSpecYaml: $rawSpecYaml, projectID: $projectId) { _id } }", variables:{rawSpecYaml:$rawSpecYaml, projectId:$projectId}}')
+
+          RESPONSE=$(curl -s -w "\n%{http_code}" --connect-timeout 30 --max-time 60 \
             --request POST \
-            --url https://gateway.zeabur.com/graphql \
-            --header "Authorization: Bearer $ZEABUR_API_TOKEN" \
+            --url https://api.zeabur.com/graphql \
+            --header "Authorization: Bearer $ZEABUR_TOKEN" \
             --header "Content-Type: application/json" \
-            --data "{\"query\": \"mutation { redeployService(serviceId: \\\"$ZEABUR_PROJECT_ID\\\") { id } }\"}" 2>&1)
-          
-          HTTP_CODE1=$(echo "$RESPONSE1" | tail -n1)
-          BODY1=$(echo "$RESPONSE1" | head -n -1)
-          
-          echo "📊 方法 1 回應："
-          echo "HTTP 狀態碼：$HTTP_CODE1"
-          echo "回應內容：$BODY1"
-          
-          SUCCESS=false
-          
-          if [ "$HTTP_CODE1" = "200" ] && ! echo "$BODY1" | grep -q '"errors"'; then
-            echo "✅ 方法 1 成功！"
-            SUCCESS=true
-          else
-            echo "❌ 方法 1 失敗，嘗試方法 2..."
-            
-            # 嘗試使用 serviceID 參數
-            RESPONSE2=$(curl -s -w "\n%{http_code}" --connect-timeout 30 --max-time 60 \
-              --request POST \
-              --url https://gateway.zeabur.com/graphql \
-              --header "Authorization: Bearer $ZEABUR_API_TOKEN" \
-              --header "Content-Type: application/json" \
-              --data "{\"query\": \"mutation { redeployService(serviceID: \\\"$ZEABUR_PROJECT_ID\\\") { id } }\"}" 2>&1)
-            
-            HTTP_CODE2=$(echo "$RESPONSE2" | tail -n1)
-            BODY2=$(echo "$RESPONSE2" | head -n -1)
-            
-            echo "📊 方法 2 回應："
-            echo "HTTP 狀態碼：$HTTP_CODE2"
-            echo "回應內容：$BODY2"
-            
-            if [ "$HTTP_CODE2" = "200" ] && ! echo "$BODY2" | grep -q '"errors"'; then
-              echo "✅ 方法 2 成功！"
-              SUCCESS=true
-            else
-              echo "❌ 方法 2 失敗，嘗試方法 3..."
-              
-              # 嘗試使用 triggerDeploy 或其他可能的 mutation
-              RESPONSE3=$(curl -s -w "\n%{http_code}" --connect-timeout 30 --max-time 60 \
-                --request POST \
-                --url https://gateway.zeabur.com/graphql \
-                --header "Authorization: Bearer $ZEABUR_API_TOKEN" \
-                --header "Content-Type: application/json" \
-                --data "{\"query\": \"mutation { deployService(serviceId: \\\"$ZEABUR_PROJECT_ID\\\") { id } }\"}" 2>&1)
-              
-              HTTP_CODE3=$(echo "$RESPONSE3" | tail -n1)
-              BODY3=$(echo "$RESPONSE3" | head -n -1)
-              
-              echo "📊 方法 3 回應："
-              echo "HTTP 狀態碼：$HTTP_CODE3"
-              echo "回應內容：$BODY3"
-              
-              if [ "$HTTP_CODE3" = "200" ] && ! echo "$BODY3" | grep -q '"errors"'; then
-                echo "✅ 方法 3 成功！"
-                SUCCESS=true
-              fi
-            fi
-          fi
-          
-          if [ "$SUCCESS" = "false" ]; then
-            echo ""
-            echo "❌ 所有部署方法都失敗了"
-            echo "🔍 錯誤摘要："
-            echo "   方法 1 (redeployService + serviceId): $HTTP_CODE1 - $BODY1"
-            echo "   方法 2 (redeployService + serviceID): $HTTP_CODE2 - $BODY2"
-            echo "   方法 3 (deployService + serviceId): $HTTP_CODE3 - $BODY3"
-            echo ""
-            echo "💡 可能的解決方案："
-            echo "   1. 檢查 ZEABUR_PROJECT_ID 是否為正確的服務 ID"
-            echo "   2. 確認 API Token 具有部署權限"
-            echo "   3. 查看 Zeabur Dashboard 中的正確服務 ID"
-            echo "   4. 聯繫 Zeabur 支援確認正確的 GraphQL mutation"
+            --data "$PAYLOAD" 2>&1)
+
+          HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
+          BODY=$(echo "$RESPONSE" | head -n -1)
+
+          echo "📊 deployTemplate 回應："
+          echo "HTTP 狀態碼：$HTTP_CODE"
+          echo "回應內容：$BODY"
+
+          if [ "$HTTP_CODE" != "200" ] || echo "$BODY" | grep -q '"errors"'; then
+            echo "❌ deployTemplate 失敗"
+            echo "💡 請確認 ZEABUR_PROJECT_ID、Token 權限與環境名稱是否有效（需與 Zeabur 專案相符）"
             exit 1
           fi
-          
+
           echo "🎉 部署請求已成功發送！"
 
       - name: 等待部署完成
